--- a/Culture and History/anthem.html
+++ b/Culture and History/anthem.html
@@ -123,7 +123,7 @@
       </p>
       <p>
         The National anthem should be played during events, if on ToadVille Soil, the ToadVille national anthem shall be played first, and at end of an event, shall be played last, there should be no events of clapping once the anthem has concluded<br>
-        It should be noted that the ToadVille Bay National anthem is hevaily based off the<a href="https://www.canada.ca/en/canadian-heritage/services/anthem-canada.html"><a>National Anthem of Canada</a>, ifnot, mostly based, please refer to that.
+        It should be noted that the ToadVille Bay National anthem is hevaily based off the <a href="https://www.canada.ca/en/canadian-heritage/services/anthem-canada.html">National Anthem of Canada</a>, if not, mostly based, please refer to that.
 
       </p>
     </section>
