--- a/Culture and History/anthem.html
+++ b/Culture and History/anthem.html
@@ -217,18 +217,26 @@
 
         <div class="anthem-card">
           <div class="anthem-card-header">
-            <div class="anthem-icon">♫</div>
             <div>
               <div class="anthem-card-title">Lyrics</div>
-              <div class="anthem-card-meta">Texte de remplacement</div>
+              <div class="anthem-card-meta">Spanish version of the anthem, written about 5 years after the National Anthem was enacted and made official on 28-09-1994</div>
             </div>
           </div>
-          <p>[Paroles Español – texte de remplacement, sans lien]</p>
+          Oh Bahía de ToadVille<br>
+          Tierra de nuestros antepasados<br>
+          Tu frente está ceñida de florones gloriosos<br>
+          Con corazones ardientes, vemos elevarse<br>
+          La tierra de ToadVille<br>
+          Tu historia es una epopeya de ToadVille Bay<br>
+          Oh Bahía de ToadVille<br>
+          De fe templada<br>
+          Oh Bahía de ToadVille<br>
+          Defendemos nuestra tierra<br>
+          Protegerá nuestros hogares y nuestros derechos<br>
         </div>
 
         <div class="anthem-card">
           <div class="anthem-card-header">
-            <div class="anthem-icon">▶</div>
             <div>
               <div class="anthem-card-title">Audio</div>
               <div class="anthem-card-meta">Enregistrement de remplacement</div>
@@ -249,18 +257,27 @@
 
         <div class="anthem-card">
           <div class="anthem-card-header">
-            <div class="anthem-icon">♫</div>
             <div>
               <div class="anthem-card-title">Lyrics</div>
-              <div class="anthem-card-meta">Toxet düx replu</div>
+              <div class="anthem-card-meta">The original version, most traditional and played often.</div>
             </div>
           </div>
-          <p>[Parolaux ToadVille – Toxet düx replu, noux lincos]</p>
+          Ô Baï düx ToadVille<br>
+          Terra düx noux aïeux<br>
+          Ton fronto es cing düx floran glorai<br>
+          Con cora ardent, nos veyon s’alçar<br>
+          La terra ToadVïllé<br>
+          Ton istora es epopeia de Baï düx ToadVille<br>
+          Ô Baï düx ToadVille<br>
+          De fe tembra<br>
+          Ô Baï düx ToadVille<br>
+          Nos defendon la terra<br>
+          Protejar nos lar e nos dreit<br>
+
         </div>
 
         <div class="anthem-card">
           <div class="anthem-card-header">
-            <div class="anthem-icon">▶</div>
             <div>
               <div class="anthem-card-title">Audio</div>
               <div class="anthem-card-meta">Enregistrement de remplacement</div>
