--- a/Culture and History/anthem.html
+++ b/Culture and History/anthem.html
@@ -267,7 +267,7 @@
           Ton fronto es cing düx floran glorai<br>
           Con cora ardent, nos veyon s’alçar<br>
           La terra ToadVïllé<br>
-          Ton istora es epopeia de Baï düx ToadVille<br>
+          Ton istora es epopeia düx Baï düx ToadVille<br>
           Ô Baï düx ToadVille<br>
           De fe tembra<br>
           Ô Baï düx ToadVille<br>
