--- a/home.html
+++ b/home.html
@@ -71,6 +71,7 @@
         <li><a href="./Legal/sanctions.html">Sanctions and prohibitions policy</a></li>
         <li><a href="./About/steam-version-eos.html">Information about Windows Vista to 8.0 support</a></li>
         <li><a href="./prime-minister.html">Prime Minister</a></li>
+        <li><a href="./provincial-flags-reform.html">Provincial flag updates</a></li>
       </ul>
     </section>
 
