--- a/Provinces/provinces.html
+++ b/Provinces/provinces.html
@@ -59,45 +59,46 @@
 		</section>
 	</main>
 
-	<footer class="site-footer" role="contentinfo">
-		<div class="footer-inner">
-			<div class="footer-brand">
-				<img class="footer-brand-img" src="../Images and Videos/flag.png" alt="ToadVille Bay" />
-			</div>
-			<div class="footer-links-columns">
-				<div>
-					<h4>About</h4>
-					<ul>
-						<li><a href="#">Our community</a></li>
-						<li><a href="#">Departments</a></li>
-						<li><a href="#">Careers</a></li>
-						<li><a href="#">Contact</a></li>
-					</ul>
-				</div>
-				<div>
-					<h4>Resources</h4>
-					<ul>
-						<li><a href="#">Programs & services</a></li>
-						<li><a href="#">Permits & licenses</a></li>
-						<li><a href="#">Accessibility</a></li>
-						<li><a href="#">Site map</a></li>
-					</ul>
-				</div>
-				<div>
-					<h4>Legal</h4>
-					<ul>
-						<li><a href="../Legal/termsofservice.html">Terms of Service</a></li>
-						<li><a href="../Legal/privacy.html">Privacy</a></li>
-						<li><a href="../Legal/communityguidelines.html">Community Guidelines</a></li>
-						<li><a href="#">Cookies</a></li>
-					</ul>
-				</div>
-				<div class="site-footer-brand" style="grid-column: 1 / -1; text-align:center;">
-					<span class="site-footer-text">© ToadVille Bay 2019-2026</span>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<script src="../scripts/site-search.js"></script>
+    <footer class="site-footer" role="contentinfo">
+        <div class="footer-inner">
+            <div class="footer-brand">
+                <img class="footer-brand-img" src="Images and Videos/flag.png" alt="ToadVille Bay Canada" />
+            </div>
+            <div class="footer-links-columns">
+                <div>
+                    <h4>About</h4>
+                    <ul>
+                        <li><a href="About/community.html">Our community</a></li>
+                        <li><a href="About/departments.html">Departments</a></li>
+                        <li><a href="About/contact.html">Contact us</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4>Resources</h4>
+                    <ul>
+                        <li><a href="resources/programs-services.html">Programs and services</a></li>
+                        <li><a href="resources/permits-licenses.html">Permits and licences</a></li>
+                        <li><a href="resources/accessibility.html">Accessibility</a></li>
+                        <li><a href="resources/sitemap.html">Sitemap</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4>Legal</h4>
+                    <ul>
+                        <li><a href="Legal/termsofservice.html">Terms of use</a></li>
+                        <li><a href="Legal/privacy.html">Privacy</a></li>
+                        <li><a href="Legal/communityguidelines.html">Community guidelines</a></li>
+                        <li><a href="Legal/cookies.html">Cookies</a></li>
+                    </ul>
+                </div>
+                <div class="site-footer-brand" style="grid-column: 1 / -1; text-align:center;">
+                    <span class="site-footer-text">© ToadVille Bay Canada 2019–2026</span>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="scripts/site-search.js"></script>
+    <script src="scripts/footer.js"></script>
 </body>
 </html>
