--- a/Provinces/provinces.html
+++ b/Provinces/provinces.html
@@ -62,7 +62,7 @@
     <footer class="site-footer" role="contentinfo">
         <div class="footer-inner">
             <div class="footer-brand">
-                <img class="footer-brand-img" src="Images and Videos/flag.png" alt="ToadVille Bay Canada" />
+                <img class="footer-brand-img" src="./Images and Videos/flag.png" alt="ToadVille Bay Canada" />
             </div>
             <div class="footer-links-columns">
                 <div>
