--- a/Provinces/provinces.html
+++ b/Provinces/provinces.html
@@ -54,7 +54,7 @@
 				<li><a href="./texica.html">Texica</a></li>
 				<li><a href="./iledetoadville.html">Île de ToadVille</a></li>
 				<li><a href="./toadville-sur.html">ToadVille Sur</a></li>
-				<li><a href="./puerto-valle.html">Puerto Valle</li>
+				<li><a href="./puerto-valle.html">Puerto Valle</a></li>
 			</ul>
 		</section>
 	</main>
