--- a/Provinces/amilpan.html
+++ b/Provinces/amilpan.html
@@ -47,7 +47,7 @@
   <main class="page-content">
     <section class="content-block ref-section" aria-labelledby="prov-name">
       <h2 id="prov-name">Amilpan</h2>
-      <img src="../Images and Videos/ToadVille Bay - Aviv.png" alt="Flag of Amilpan" class="pm-photo" />
+      <img src="../Images and Videos/ToadVille Bay - Amilpan.png" alt="Flag of Amilpan" class="pm-photo" />
       <p>This is the official page for the province of Amilpan Content will be added soon.</p>
     </section>
 
