--- a/Provinces/amilpan.html
+++ b/Provinces/amilpan.html
@@ -6,7 +6,7 @@
   <title>Amilpan — ToadVille Bay</title>
   <meta content="Amilpan — ToadVille Bay" property="og:title" />
   <meta content="Information and resources for Amilpan" property="og:description" />
-  <meta content="https://toadvillebay.com/Provinces/amilplan.png" property="og:url" />
+  <meta content="https://toadvillebay.com/Provinces/amilpan.html" property="og:url" />
   <meta content="https://toadvillebay.com/Images and Videos/ToadVille Bay - Amilpan.png" property="og:image" />
   <meta content="#0066CC" data-react-helmet="true" name="theme-color" />
   <link rel="icon" type="image/png" href="../Images and Videos/ToadVilleCOA.png" />
