--- a/Provinces/toadville-sur.html
+++ b/Provinces/toadville-sur.html
@@ -47,7 +47,7 @@
   <main class="page-content">
     <section class="content-block ref-section" aria-labelledby="prov-name">
       <h2 id="prov-name">ToadVille Sur</h2>
-      <img src="../Images and Videos/ToadVille Bay - ToadVille Sur" alt="Flag of ToadVille Sur" class="pm-photo" />
+      <img src="../Images and Videos/ToadVille Bay - ToadVille Sur.png" alt="Flag of ToadVille Sur" class="pm-photo" />
       <p>This is the official page for the province of ToadVille Sur Content will be added soon.</p>
     </section>
 
