--- a/Provinces/texica.html
+++ b/Provinces/texica.html
@@ -7,7 +7,7 @@
   <meta content="Texica — ToadVille Bay" property="og:title" />
   <meta content="Information and resources for Texica." property="og:description" />
   <meta content="https://toadvillebay.com/Provinces/texica.html" property="og:url" />
-  <meta content="https://toadvillebay.com/Images and Videos/flag.png" property="og:image" />
+  <meta content="https://toadvillebay.com/Images and Videos/ToadVille Bay - Texica.png" property="og:image" />
   <link rel="stylesheet" href="../styles.css" />
   <style>.h1-accent{color:#002244}.pm-photo{max-width:220px;width:100%;height:auto;border-radius:8px;display:block;margin:12px 0}</style>
 </head>
@@ -17,7 +17,7 @@
   <main class="page-content">
     <section class="content-block" aria-labelledby="prov-name">
       <h2 id="prov-name">Texica</h2>
-      <img src="../Images and Videos/flag.png" alt="Flag of Texica" class="pm-photo" />
+      <img src="../Images and Videos/ToadVille Bay - Texica.png" alt="Flag of Texica" class="pm-photo" />
       <p>This is the official page for Texica. Content will be added.</p>
     </section>
     <section class="content-block" aria-labelledby="prov-quick">
