--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="container">
     <main class="landing-content" role="main">
       <div class="header">
-        <img class="site-flag" src="Images and Videos/flag.png" alt="ToadVille Bay Flag" />
+        <img class="site-flag" src="./Images and Videos/flag.png" alt="ToadVille Bay Flag" />
         <h1 class="site-title">Welcome to the Republic of ToadVille Bay</h1>
       </div>
 
@@ -36,9 +36,6 @@
       </nav>
 
       <footer class="landing-footer">
-        <p class="landing-description">
-          Inspired by the game "ToadVille Bay" – A creative exploration of government website design.
-        </p>
         <div class="landing-copyright">
           © ToadVille Bay du Canada 2019–<span id="current-year"></span>
         </div>
