--- a/Provinces/amilpan.html
+++ b/Provinces/amilpan.html
@@ -1,25 +1,282 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Amilpan — ToadVille Bay</title>
+
   <meta content="Amilpan — ToadVille Bay" property="og:title" />
   <meta content="Information and resources for Amilpan" property="og:description" />
   <meta content="https://toadvillebay.com/Provinces/amilpan.html" property="og:url" />
   <meta content="https://toadvillebay.com/Images and Videos/ToadVille Bay - Amilpan.png" property="og:image" />
   <meta content="#0066CC" data-react-helmet="true" name="theme-color" />
+
   <link rel="icon" type="image/png" href="../Images and Videos/ToadVilleCOA.png" />
   <link rel="apple-touch-icon" href="../Images and Videos/ToadVilleCOA.png" />
   <link rel="stylesheet" href="../styles.css" />
+
   <style>
-    .ref-section { max-width: 960px; margin: 0 auto 32px; padding: 0 16px; }
-    .ref-stats { display:flex; gap:12px; flex-wrap:wrap; margin-top:12px; }
-    .ref-card { background:#f8fbff; color:#02243a; border:1px solid #cfe0fb; padding:12px 14px; border-radius:8px; box-shadow:0 3px 10px rgba(2,36,58,0.06); min-width:200px; }
-    .h1-accent { color: #002244; }
-    .pm-photo { max-width:220px; width:100%; height:auto; border-radius:8px; display:block; margin:12px 0; }
+    :root{
+      --ink:#0b1620;
+      --muted:#425466;
+      --card:#ffffff;
+      --card2:#f7fbff;
+      --border:#dbe7ff;
+      --brand:#0b5bd3;
+      --brand2:#2f80ff;
+      --shadow: 0 10px 30px rgba(2,36,58,0.12);
+      --shadow2: 0 6px 16px rgba(2,36,58,0.10);
+      --radius: 16px;
+    }
+    @media (prefers-color-scheme: dark){
+      :root{
+        --ink:#e9f1ff;
+        --muted:#b7c7dd;
+        --card:#0e1623;
+        --card2:#0b1220;
+        --border:#1b2a44;
+        --shadow: 0 12px 32px rgba(0,0,0,0.45);
+        --shadow2: 0 8px 18px rgba(0,0,0,0.35);
+      }
+    }
+
+    .ref-wrap { max-width: 1040px; margin: 0 auto; padding: 0 16px; }
+    .section { margin: 18px 0; }
+    .card {
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow2);
+      overflow: hidden;
+    }
+    .card.pad { padding: 18px; }
+    .kicker { color: var(--muted); font-size: 0.95rem; margin-top: 6px; }
+    .h1-accent { color: var(--ink); letter-spacing: -0.02em; }
+    .sr-only{ position:absolute; left:-9999px; }
+
+    /* Hero */
+    .hero-upgrade{
+      position: relative;
+      margin: 18px auto 0;
+      border-radius: 22px;
+      overflow: hidden;
+      box-shadow: var(--shadow);
+      border: 1px solid var(--border);
+      background:
+        radial-gradient(900px 300px at 15% 25%, rgba(47,128,255,0.30), transparent 65%),
+        radial-gradient(900px 300px at 90% 15%, rgba(11,91,211,0.25), transparent 60%),
+        linear-gradient(135deg, rgba(247,251,255,0.95), rgba(255,255,255,0.85));
+    }
+    @media (prefers-color-scheme: dark){
+      .hero-upgrade{
+        background:
+          radial-gradient(900px 300px at 15% 25%, rgba(47,128,255,0.25), transparent 65%),
+          radial-gradient(900px 300px at 90% 15%, rgba(11,91,211,0.18), transparent 60%),
+          linear-gradient(135deg, rgba(8,14,24,0.95), rgba(14,22,35,0.90));
+      }
+    }
+    .hero-grid{
+      display: grid;
+      grid-template-columns: 120px 1fr;
+      gap: 16px;
+      padding: 22px;
+      align-items: center;
+    }
+    @media (max-width: 560px){
+      .hero-grid{ grid-template-columns: 1fr; }
+    }
+    .flag-wrap{
+      display:flex; align-items:center; justify-content:center;
+      width: 120px; height: 84px;
+      border-radius: 14px;
+      background: rgba(255,255,255,0.55);
+      border: 1px solid rgba(219,231,255,0.9);
+      box-shadow: 0 10px 20px rgba(2,36,58,0.12);
+    }
+    @media (prefers-color-scheme: dark){
+      .flag-wrap{ background: rgba(255,255,255,0.06); border-color: rgba(27,42,68,0.9); }
+    }
+    .flag-img{
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      padding: 8px;
+      filter: drop-shadow(0 10px 14px rgba(2,36,58,0.16));
+    }
+    .hero-title{
+      font-size: clamp(1.9rem, 2.4vw, 2.4rem);
+      margin: 0;
+    }
+    .hero-sub{
+      margin: 8px 0 0;
+      color: var(--muted);
+      max-width: 70ch;
+      line-height: 1.5;
+    }
+    .hero-badges{
+      display:flex; flex-wrap:wrap; gap:10px;
+      margin-top: 14px;
+    }
+    .badge{
+      display:inline-flex; align-items:center; gap:8px;
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,0.65);
+      padding: 8px 10px;
+      border-radius: 999px;
+      font-size: 0.92rem;
+      color: var(--ink);
+    }
+    @media (prefers-color-scheme: dark){
+      .badge{ background: rgba(255,255,255,0.06); }
+    }
+    .dot{
+      width: 9px; height: 9px; border-radius: 99px;
+      background: var(--brand2);
+      box-shadow: 0 0 0 6px rgba(47,128,255,0.18);
+    }
+
+    /* Layout */
+    .two-col{
+      display:grid;
+      grid-template-columns: 1.1fr 0.9fr;
+      gap: 16px;
+      align-items: start;
+      margin-top: 16px;
+    }
+    @media (max-width: 900px){
+      .two-col{ grid-template-columns: 1fr; }
+    }
+
+    /* Facts */
+    .facts-grid{
+      display:grid;
+      grid-template-columns: repeat(2, minmax(0,1fr));
+      gap: 12px;
+    }
+    @media (max-width: 520px){
+      .facts-grid{ grid-template-columns: 1fr; }
+    }
+    .fact{
+      background: var(--card2);
+      border: 1px solid var(--border);
+      border-radius: 14px;
+      padding: 12px 14px;
+      display:flex;
+      gap: 12px;
+      align-items: flex-start;
+    }
+    .icon{
+      width: 38px; height: 38px;
+      border-radius: 12px;
+      background: rgba(47,128,255,0.14);
+      display:flex; align-items:center; justify-content:center;
+      flex: 0 0 auto;
+      border: 1px solid rgba(47,128,255,0.18);
+      font-weight: 800;
+      color: var(--brand);
+    }
+    .fact strong{ display:block; margin-bottom: 2px; }
+    .fact span{ color: var(--muted); }
+
+    /* Coat of Arms */
+    .coa-grid{
+      display:grid;
+      grid-template-columns: 220px 1fr;
+      gap: 20px;
+      align-items: center;
+    }
+    @media (max-width: 720px){
+      .coa-grid{ grid-template-columns: 1fr; text-align:center; }
+    }
+    .coa-image-wrap{
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      background: var(--card2);
+      border: 1px solid var(--border);
+      border-radius: 18px;
+      padding: 16px;
+      box-shadow: var(--shadow2);
+    }
+    .coa-img{
+      max-width: 180px;
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+      filter: drop-shadow(0 12px 18px rgba(2,36,58,0.18));
+    }
+    .coa-meta{
+      margin-top: 12px;
+      display:grid;
+      gap: 8px;
+      color: var(--muted);
+    }
+
+    /* Expand/Collapse info blocks */
+    .info-block{
+      margin-top: 12px;
+      border: 1px solid var(--border);
+      border-radius: 14px;
+      background: var(--card2);
+      padding: 10px 12px;
+    }
+    .info-block summary{
+      cursor: pointer;
+      font-weight: 800;
+      color: var(--ink);
+      list-style: none;
+    }
+    .info-block summary::-webkit-details-marker { display: none; }
+    .info-block summary:after{
+      content: "▾";
+      float: right;
+      color: var(--muted);
+      transition: transform 0.15s ease;
+    }
+    details[open] summary:after{
+      transform: rotate(180deg);
+    }
+    .info-block .info-body{
+      margin-top: 10px;
+      color: var(--muted);
+      line-height: 1.55;
+    }
+
+    /* Mini Nav (internal jumps only, no extra pages) */
+    .mini-nav{
+      display:flex;
+      flex-wrap:wrap;
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .mini-nav a{
+      text-decoration:none;
+      color: var(--ink);
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,0.65);
+      padding: 10px 12px;
+      border-radius: 12px;
+      transition: transform .12s ease, box-shadow .12s ease, border-color .12s ease;
+      display:inline-flex;
+      gap: 10px;
+      align-items:center;
+    }
+    @media (prefers-color-scheme: dark){
+      .mini-nav a{ background: rgba(255,255,255,0.06); }
+    }
+    .mini-nav a:hover{
+      transform: translateY(-1px);
+      box-shadow: var(--shadow2);
+      border-color: rgba(47,128,255,0.45);
+    }
+    .pill{
+      width: 8px; height: 8px; border-radius: 99px;
+      background: var(--brand2);
+      box-shadow: 0 0 0 6px rgba(47,128,255,0.16);
+    }
   </style>
 </head>
+
 <body>
   <header class="site-header" role="banner">
     <div class="site-header__top">
@@ -27,6 +284,7 @@
         <img src="../Images and Videos/flag.png" alt="ToadVille Bay" class="brand-mark" />
         <span class="brand-text">ToadVille Bay</span>
       </a>
+
       <div class="site-utils">
         <form class="site-search" role="search" aria-label="Site search" onsubmit="handleSearch(event)">
           <label for="q" class="sr-only">Search ToadVille Bay</label>
@@ -37,28 +295,181 @@
     </div>
   </header>
 
-  <section class="hero" aria-label="Aviv">
-    <div class="hero__content">
-      <h1 class="h1-accent">Amilpan</h1>
-      <p>Information and resources for the province of Amilpan</p>
-    </div>
-  </section>
-
   <main class="page-content">
-    <section class="content-block ref-section" aria-labelledby="prov-name">
-      <h2 id="prov-name">Amilpan</h2>
-      <img src="../Images and Videos/ToadVille Bay - Amilpan.png" alt="Flag of Amilpan" class="pm-photo" />
-      <p>This is the official page for the province of Amilpan Content will be added soon.</p>
-    </section>
+    <div class="ref-wrap">
+      <!-- HERO -->
+      <section class="hero-upgrade section" aria-label="Amilpan hero">
+        <div class="hero-grid">
+          <div class="flag-wrap" aria-hidden="true">
+            <img src="../Images and Videos/ToadVille Bay - Amilpan.png" alt="" class="flag-img" />
+          </div>
 
-    <section class="content-block ref-section" aria-labelledby="prov-quick">
-      <h2 id="prov-quick">Quick Facts</h2>
-      <div class="ref-stats">
-        <div class="ref-card"><strong>Name:</strong> Amilpan</div>
-        <div class="ref-card"><strong>Location:</strong> Central</div>
-        <div class="ref-card"><strong>Time zone:</strong> Central Time</div>
-      </div>
-    </section>
+          <div>
+            <h1 class="hero-title h1-accent">Amilpan</h1>
+            <p class="hero-sub">Information and resources for the province of Amilpan.</p>
+
+            <div class="hero-badges" aria-label="Highlights">
+              <span class="badge"><span class="dot"></span> Province portal</span>
+              <span class="badge"><span class="dot"></span> One-page info layout</span>
+              <span class="badge"><span class="dot"></span> Expand sections for details</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- COAT OF ARMS -->
+      <section class="card pad section" aria-labelledby="coa-title">
+        <h2 id="coa-title" style="margin-top:0;">Coat of Arms</h2>
+
+        <div class="coa-grid">
+          <div class="coa-image-wrap">
+            <img
+              src="../Images and Videos/ToadVille Bay - Amilpan COA.png"
+              alt="Coat of Arms of Amilpan"
+              class="coa-img"
+            />
+          </div>
+
+          <div>
+            <p class="kicker">The official coat of arms of the Province of Amilpan.</p>
+
+            <div class="coa-meta">
+              <div><strong>Motto:</strong> <em>“Progression and Producer”</em></div>
+              <div><strong>Adopted:</strong> 1956</div>
+            </div>
+
+            <!-- Expandable details (NO extra pages) -->
+            <details class="info-block">
+              <summary>Symbolism</summary>
+              <div class="info-body">
+                Add the official symbolism explanation here. This stays on the same page and expands when clicked.
+              </div>
+            </details>
+
+            <details class="info-block">
+              <summary>Heraldic description (blazon)</summary>
+              <div class="info-body">
+                If you want it to sound extra official, write the blazon here. (Optional)
+              </div>
+            </details>
+          </div>
+        </div>
+      </section>
+
+      <!-- Overview + Quick Facts -->
+      <section class="two-col section" aria-label="Overview and quick facts">
+        <section class="card pad" aria-labelledby="prov-overview">
+          <h2 id="prov-overview" style="margin-top:0;">Overview</h2>
+          <p class="kicker">
+            This is the official page for the province of <strong>Amilpan</strong>. Use the expand sections below
+            to store extra info without making a bunch of new pages.
+          </p>
+
+          <div class="mini-nav" aria-label="On this page">
+            <a href="#quick-facts"><span class="pill"></span> Quick Facts</a>
+            <a href="#culture"><span class="pill"></span> Culture</a>
+            <a href="#geography"><span class="pill"></span> Geography</a>
+            <a href="#cities"><span class="pill"></span> Cities</a>
+            <a href="#government"><span class="pill"></span> Government</a>
+          </div>
+        </section>
+
+        <section class="card pad" aria-labelledby="quick-facts">
+          <h2 id="quick-facts" style="margin-top:0;">Quick Facts</h2>
+
+          <div class="facts-grid" role="list">
+            <div class="fact" role="listitem">
+              <div class="icon">A</div>
+              <div><strong>Name</strong><span>Amilpan</span></div>
+            </div>
+
+            <div class="fact" role="listitem">
+              <div class="icon">📍</div>
+              <div><strong>Location</strong><span>Central</span></div>
+            </div>
+
+            <div class="fact" role="listitem">
+              <div class="icon">⏱</div>
+              <div><strong>Time zone</strong><span>Central Time</span></div>
+            </div>
+
+            <div class="fact" role="listitem">
+              <div class="icon">🗺</div>
+              <div><strong>Map</strong><span>Coming soon</span></div>
+            </div>
+          </div>
+        </section>
+      </section>
+
+      <!-- CULTURE -->
+      <section class="card pad section" id="culture" aria-labelledby="culture-title">
+        <h2 id="culture-title" style="margin-top:0;">Culture</h2>
+
+        <details class="info-block">
+          <summary>Languages</summary>
+          <div class="info-body">
+            Add languages here (English/French/Spanish/ToadVille language, etc).
+          </div>
+        </details>
+
+        <details class="info-block">
+          <summary>Traditions & holidays</summary>
+          <div class="info-body">
+            Add holidays, food, music, festivals, and cultural notes here.
+          </div>
+        </details>
+      </section>
+
+      <!-- GEOGRAPHY -->
+      <section class="card pad section" id="geography" aria-labelledby="geo-title">
+        <h2 id="geo-title" style="margin-top:0;">Geography</h2>
+
+        <details class="info-block">
+          <summary>Landscape</summary>
+          <div class="info-body">
+            Mountains? plains? forests? desert? Add it here.
+          </div>
+        </details>
+
+        <details class="info-block">
+          <summary>Climate</summary>
+          <div class="info-body">
+            Add seasonal notes and weather patterns here.
+          </div>
+        </details>
+      </section>
+
+      <!-- CITIES -->
+      <section class="card pad section" id="cities" aria-labelledby="cities-title">
+        <h2 id="cities-title" style="margin-top:0;">Cities & municipalities</h2>
+
+        <details class="info-block">
+          <summary>Municipalities list</summary>
+          <div class="info-body">
+            Put your municipality list here as plain text or a simple list. No extra pages needed.
+          </div>
+        </details>
+      </section>
+
+      <!-- GOVERNMENT -->
+      <section class="card pad section" id="government" aria-labelledby="gov-title">
+        <h2 id="gov-title" style="margin-top:0;">Government</h2>
+
+        <details class="info-block">
+          <summary>Leadership</summary>
+          <div class="info-body">
+            Add Premier/Governor name, cabinet members, and contact info here.
+          </div>
+        </details>
+
+        <details class="info-block">
+          <summary>Departments</summary>
+          <div class="info-body">
+            Add department names and descriptions here (transport, education, health, etc).
+          </div>
+        </details>
+      </section>
+    </div>
   </main>
 
   <footer class="site-footer" role="contentinfo">
@@ -66,6 +477,7 @@
       <div class="footer-brand">
         <img class="footer-brand-img" src="../Images and Videos/flag.png" alt="ToadVille Bay Flag" />
       </div>
+
       <div class="footer-links-columns">
         <div>
           <h4>About</h4>
@@ -76,6 +488,7 @@
             <li><a href="#">Contact</a></li>
           </ul>
         </div>
+
         <div>
           <h4>Resources</h4>
           <ul>
@@ -85,6 +498,7 @@
             <li><a href="#">Site map</a></li>
           </ul>
         </div>
+
         <div>
           <h4>Legal</h4>
           <ul>
@@ -94,12 +508,14 @@
             <li><a href="#">Cookies</a></li>
           </ul>
         </div>
+
         <div class="site-footer-brand" style="grid-column: 1 / -1; text-align:center;">
           <span class="site-footer-text">© ToadVille Bay 2019-2026</span>
         </div>
       </div>
     </div>
   </footer>
+
   <script src="../scripts/site-search.js"></script>
 </body>
 </html>
