--- a/Provinces/amilpan.html
+++ b/Provinces/amilpan.html
@@ -309,9 +309,9 @@
             <p class="hero-sub">Information and resources for the province of Amilpan.</p>
 
             <div class="hero-badges" aria-label="Highlights">
-              <span class="badge"><span class="dot"></span> Province portal</span>
-              <span class="badge"><span class="dot"></span> One-page info layout</span>
-              <span class="badge"><span class="dot"></span> Expand sections for details</span>
+              <span class="badge"><span class="dot"></span> Province</span>
+              <span class="badge"><span class="dot"></span> Conservative Progressive</span>
+              <span class="badge"><span class="dot"></span> 1956</span>
             </div>
           </div>
         </div>
@@ -340,9 +340,18 @@
 
             <!-- Expandable details (NO extra pages) -->
             <details class="info-block">
-              <summary>Symbolism</summary>
+              <summary>Provincial Anthem (English)</summary>
               <div class="info-body">
-                Add the official symbolism explanation here. This stays on the same page and expands when clicked.
+                Our day is time<br>
+                Thy shalt not fall<br>
+                Our lovely landscape and nature<br>
+                The sky full of clouds shall grant its blessings upon us.<br>
+                Amilpan our home town!<br>
+                Our day is time<br>
+                Our neighbors, our families — all shall be blessed.<br>
+                Oh, may our home stand together forever.<br>
+                God shall protect us<br>
+                Our day is time<br>
               </div>
             </details>
 
