--- a/Provinces/amilpan.html
+++ b/Provinces/amilpan.html
@@ -356,9 +356,9 @@
             </details>
 
             <details class="info-block">
-              <summary>Heraldic description (blazon)</summary>
+              <summary>Province description</summary>
               <div class="info-body">
-                If you want it to sound extra official, write the blazon here. (Optional)
+                Amilpan was created in 1956 after the provincial carvation act, resulting in Amilpan having self governance and being able to maintain its own farm culture.
               </div>
             </details>
           </div>
@@ -371,7 +371,7 @@
           <h2 id="prov-overview" style="margin-top:0;">Overview</h2>
           <p class="kicker">
             This is the official page for the province of <strong>Amilpan</strong>. Use the expand sections below
-            to store extra info without making a bunch of new pages.
+            to get more information about Amilpan.
           </p>
 
           <div class="mini-nav" aria-label="On this page">
