--- a/Culture and History/anthem.html
+++ b/Culture and History/anthem.html
@@ -159,12 +159,12 @@
           <div class="anthem-card-header">
             <div>
               <div class="anthem-card-title">Audio</div>
-              <div class="anthem-card-meta">Placeholder recording</div>
+              <div class="anthem-card-meta">Recording by: <b>Gabriel Medrano Gutiérrez</b></div>
             </div>
           </div>
           <audio controls preload="none">
             
-            <source src="../Audio/TB-Anthem-English.mp3" type="audio/mpeg" />
+            <source src="../Audio/TB-Anthem-English.MP3" type="audio/mpeg"/>
             
             Your browser does not support the audio element.
           </audio>
