--- a/Culture and History/anthem.html
+++ b/Culture and History/anthem.html
@@ -199,13 +199,13 @@
           <div class="anthem-card-header">
             <div>
               <div class="anthem-card-title">Audio</div>
-              <div class="anthem-card-meta">Enregistrement de remplacement</div>
+              <div class="anthem-card-meta">Recording by: <b>Gabriel Medrano Gutiérrez</b> NOTE: ANTHEM RECORDING IS NOT FLUENT FRENCH</div>
             </div>
           </div>
           <audio controls preload="none">
-            <!-- Example later:
-            <source src="../Audio/TB-Anthem-Francais.mp3" type="audio/mpeg" />
-            -->
+        
+            <source src="../Audio/TB-Anthem-Francais.MP3" type="audio/mpeg" />
+            
             Your browser does not support the audio element.
           </audio>
         </div>
