--- a/Provinces/amilpan.html
+++ b/Provinces/amilpan.html
@@ -309,8 +309,8 @@
             <p class="hero-sub">Information and resources for the province of Amilpan.</p>
 
             <div class="hero-badges" aria-label="Highlights">
-              <span class="badge"><span class="dot"></span> Province</span>
-              <span class="badge"><span class="dot"></span> Conservative Progressive</span>
+              <span class="badge"><span class="dot"></span> Amilpano</span>
+              <span class="badge"><span class="dot"></span> Progressive-Conservative</span>
               <span class="badge"><span class="dot"></span> 1956</span>
             </div>
           </div>
