--- a/Provinces/amilpan.html
+++ b/Provinces/amilpan.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Amilpan — ToadVille Bay</title>
+  <title>Amilpan - ToadVille Bay</title>
 
   <meta content="Amilpan — ToadVille Bay" property="og:title" />
   <meta content="Information and resources for Amilpan" property="og:description" />
@@ -403,8 +403,8 @@
             </div>
 
             <div class="fact" role="listitem">
-              <div class="icon">🗺</div>
-              <div><strong>Map</strong><span>Coming soon</span></div>
+              <div class="icon">🏙️</div>
+              <div><strong>Capital</strong><span>Aetron</span></div>
             </div>
           </div>
         </section>
