--- a/Provinces/amilpan.html
+++ b/Provinces/amilpan.html
@@ -394,12 +394,12 @@
 
             <div class="fact" role="listitem">
               <div class="icon">📍</div>
-              <div><strong>Location</strong><span>Central</span></div>
+              <div><strong>Location</strong><span>East</span></div>
             </div>
 
             <div class="fact" role="listitem">
               <div class="icon">⏱</div>
-              <div><strong>Time zone</strong><span>Central Time</span></div>
+              <div><strong>Time zone</strong><span>Eastern Time</span></div>
             </div>
 
             <div class="fact" role="listitem">
@@ -417,14 +417,14 @@
         <details class="info-block">
           <summary>Languages</summary>
           <div class="info-body">
-            Add languages here (English/French/Spanish/ToadVille language, etc).
+            Amilpan is mainly English speaking, with some Spanish at certain regions within the province, you will mostly see signs in English, but some in Spanish, more throughout the rural areas.
           </div>
         </details>
 
         <details class="info-block">
           <summary>Traditions & holidays</summary>
           <div class="info-body">
-            Add holidays, food, music, festivals, and cultural notes here.
+            Food is very traditional here, with the national dish "Buffalo Chips" being created here, grilled chicken dunked into Buffalo sauce and served with chips as a side. Amilpan is also home to the biggest produce of the entire federation.
           </div>
         </details>
       </section>
@@ -436,14 +436,14 @@
         <details class="info-block">
           <summary>Landscape</summary>
           <div class="info-body">
-            Mountains? plains? forests? desert? Add it here.
+            Amilpan is covered in plains, with a bunch of farms growing crops and breeding animals to make the best meals you will ever have.
           </div>
         </details>
 
         <details class="info-block">
           <summary>Climate</summary>
           <div class="info-body">
-            Add seasonal notes and weather patterns here.
+            The weather around spring to summer averages around 20°C, during autumn and winter, the weather averages around 8-14°C.
           </div>
         </details>
       </section>
@@ -455,7 +455,21 @@
         <details class="info-block">
           <summary>Municipalities list</summary>
           <div class="info-body">
-            Put your municipality list here as plain text or a simple list. No extra pages needed.
+            1. Aetron C.R.<br>
+            2. Agreville<br>
+            3. Bordon<br>
+            4. Coalsvile<br>
+            5. Cedar Plains<br>
+            6. Dorton<br>
+            7. Elevities<br>
+            8. Fort-Nano<br>
+            9. Gilbert<br>
+            10. Gabe Port<br>
+            11. Holeberta<br>
+            12. Ironia<br>
+            13. Kepler<br>
+            14. Loris<br>
+            15. Memoria<br>
           </div>
         </details>
       </section>
@@ -467,14 +481,22 @@
         <details class="info-block">
           <summary>Leadership</summary>
           <div class="info-body">
-            Add Premier/Governor name, cabinet members, and contact info here.
+            <b>Premier</b>: Andy Davidson (Progressive Conservative)<br>
+            <b>Deputy Premier</b>: Angelina Brown (Progessive Conservative)<br>
+            <b>Justice:</b>: Mark Caldera (Progressive Conservative)<br>
+            <b>Transportation Department</b>: Rodney Greens (Progressive Conservative)<br>
+            <b>Department of Culture & Heritage</b>: Gilbert Reeds (Progressive Conservative)<br>
+            <b>Tech & Development Department:</b> Giovanni Bussolini (Extremepatriot Party)<br>
           </div>
         </details>
 
         <details class="info-block">
           <summary>Departments</summary>
           <div class="info-body">
-            Add department names and descriptions here (transport, education, health, etc).
+            Transport: Amitrans<br>
+            Culture: Amilpano Centre<br>
+            Safety: Amil Mounted Police
+            Development: Centre of Development
           </div>
         </details>
       </section>
