--- a/Provinces/amilpan.html
+++ b/Provinces/amilpan.html
@@ -495,8 +495,8 @@
           <div class="info-body">
             Transport: Amitrans<br>
             Culture: Amilpano Centre<br>
-            Safety: Amil Mounted Police
-            Development: Centre of Development
+            Safety: Amil Mounted Police<br>
+            Development: Centre of Development<br>
           </div>
         </details>
       </section>
