--- a/Executives/president.html
+++ b/Executives/president.html
@@ -11,7 +11,7 @@
   <meta content="#0066CC" data-react-helmet="true" name="theme-color" />
   <link rel="icon" type="image/png" href="../Images and Videos/ToadVilleCOA.png" />
   <link rel="apple-touch-icon" href="../Images and Videos/ToadVilleCOA.png" />
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="../styles.css" />
   <style>
     /* Local styles for the Prime Minister profile page */
     .ref-section { max-width: 960px; margin: 0 auto 32px; padding: 0 16px; }
