--- a/home.html
+++ b/home.html
@@ -102,9 +102,9 @@
           <h3>Culture and history</h3>
           <p>Discover what shapes ToadVille Bay.</p>
         </a>
-        <a class="card" href="Community/community.html" aria-label="Community programs">
-          <h3>Community</h3>
-          <p>Events, facilities and programs for residents.</p>
+        <a class="card" href="Government/government.html" aria-label="Community programs">
+          <h3>Government</h3>
+          <p>Learn about the ToadVille Bay government and who works for it.</p>
         </a>
         <a class="card" href="Environment/environment.html" aria-label="Environment">
           <h3>Environment</h3>
