--- a/Government/prime-minister.html
+++ b/Government/prime-minister.html
@@ -182,7 +182,7 @@
   <main class="page-content">
     <section class="content-block" aria-labelledby="pm-name">
       <div class="pm-profile">
-        <img src="Images and Videos/gabemedgutierrez.jpg" alt="Gabriel Medrano" class="pm-photo" />
+        <img src="../Images and Videos/gabemedgutierrez.jpg" alt="Gabriel Medrano" class="pm-photo" />
 
         <div>
           <h2 id="pm-name" class="pm-title">Prime Minister — Gabriel Medrano Gutiérrez</h2>
