--- a/Government/prime-minister.html
+++ b/Government/prime-minister.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Prime Minister — ToadVille Bay Canada</title>
+  <title>Prime Minister — Republic of ToadVille Bay (Canada)</title>
   <meta content="Prime Minister of ToadVille Bay Canada — Gabriel Medrano Gutiérrez" property="og:title" />
   <meta content="Profile and information on Gabriel Medrano Gutiérrez, the Prime Minister of ToadVille Bay Canada — in office since July 3, 2019." property="og:description" />
   <meta content="https://toadvillebay.com/Government/prime-minister.html" property="og:url" />
