--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ToadVille Bay Canada – Welcome</title>
+  <title>Home - Republic of ToadVille Bay (Canada)</title>
   <meta content="ToadVille Bay – Welcome" property="og:title" />
   <meta content="Find programs, services and information for residents and newcomers to ToadVille Bay." property="og:description" />
   <meta content="https://toadvillebay.com/" property="og:url" />
