--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home - Republic of ToadVille Bay (Canada)</title>
-  <meta content="ToadVille Bay – Welcome" property="og:title" />
+  <meta content="Home - Republic of ToadVille Bay (Canada)" property="og:title" />
   <meta content="Find programs, services and information for residents and newcomers to ToadVille Bay." property="og:description" />
   <meta content="https://toadvillebay.com/" property="og:url" />
   <meta content="https://toadvillebay.com/Images and Videos/ToadVilleCOA.png" property="og:image" />
