--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to ToadVille Bay Canada (English)</title>
+  <title>Welcome - Republic of ToadVille Bay (Canada)</title>
 
-  <meta property="og:title" content="Welcome to ToadVille Bay Canada (English)" />
+  <meta property="og:title" content="Welcome - Republic of ToadVille Bay (Canada)" />
   <meta property="og:description" content="Official government website of ToadVille Bay – Immigration, citizenship, businesses and community services." />
   <meta property="og:url" content="https://toadvillebay.com/" />
   <meta property="og:image" content="https://toadvillebay.com/Images and Videos/ToadVilleCOA.png" />
@@ -21,7 +21,7 @@
     <main class="landing-content" role="main">
       <div class="header">
         <img class="site-flag" src="./Images and Videos/flag.png" alt="ToadVille Bay Flag" />
-        <h1 class="site-title">Welcome to the Republic of ToadVille Bay</h1>
+        <h1 class="site-title">Welcome - Republic of ToadVille Bay (Canada)</h1>
       </div>
 
       <nav class="navigation-buttons" role="navigation" aria-label="Landing navigation">
