--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About – ToadVille Bay Canada</title>
-    <meta content="About ToadVille Bay Canada" property="og:title" />
-    <meta content="Discover ToadVille Bay Canada, a creative and imaginative government-style website project." property="og:description" />
+    <title>About – Republic of ToadVille Bay (Canada)</title>
+    <meta content="Welcome - Republic of ToadVille Bay (Canada)" property="og:title" />
+    <meta content="Find out who is behind the Republic of ToadVille Bay." property="og:description" />
     <meta content="https://toadvillebay.com/about.html" property="og:url" />
     <meta content="https://toadvillebay.com/Images and Videos/ToadVilleCOA.png" property="og:image" />
     <link rel="icon" type="image/png" href="./Images and Videos/ToadVilleCOA.png" />
