--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="container">
     <main class="landing-content" role="main">
       <div class="header">
-        <img class="site-flag" src="./Images and Videos/flag.png" alt="ToadVille Bay Flag" />
+        <img class="site-flag" src="./Images and Videos/ToadVille Bay - Tasiq Nunaat.png" alt="ToadVille Bay Flag" />
         <h1 class="site-title">Welcome - Republic of ToadVille Bay (Canada)</h1>
       </div>
 
