--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
       <div class="site-utils">
         <form class="site-search" role="search" aria-label="Recherche sur le site" onsubmit="handleSearch(event)">
           <label for="q" class="sr-only">Search</label>
-          <input id="q" name="q" type="search" placeholder="Rechercher dans la Baie de ToadVille" />
+          <input id="q" name="q" type="search" placeholder="Search ToadVille Bay" />
           <button type="submit">Search</button>
         </form>
       </div>
