--- a/about.html
+++ b/about.html
@@ -214,7 +214,7 @@
         <h1 class="profile-name">Gabriel Medrano Gutiérrez</h1>
         <p class="profile-title">Creator and designer of the <strong><em>Republic of ToadVille Bay</em></strong></p>
         <p class="profile-bio">
-            A Mexican-American web developer and designer from California, I bring a unique neurodivergent perspective to digital design. As an autistic creator, I’ve channelled my passion for accessibility and user experience into reimagining public services. ToadVille Bay Canada is inspired by a game of the same name, turning its virtual world into an exploration of how government websites could be more engaging and inclusive. This project combines a love of video games with a mission to make public services more accessible and user-friendly for everyone.
+            A Mexican-Californian web developer and designer from California, I bring a unique neurodivergent perspective to digital design. As an autistic creator, I’ve channelled my passion for accessibility and user experience into reimagining public services. ToadVille Bay Canada is inspired by a game of the same name, turning its virtual world into an exploration of how government websites could be more engaging and inclusive. This project combines a love of video games with a mission to make public services more accessible and user-friendly for everyone.
         </p>
     </section>
 
