--- a/Culture and History/cultureandhistory.html
+++ b/Culture and History/cultureandhistory.html
@@ -78,6 +78,9 @@
           <h3>Gabe The Narwhal</h3>
           <p>Details about the ToadVille Bay Mascot.</p>
         </a>
+        <a class="card" href="./2026zelenoboraref.html" aria-label="2026 referendum">
+          <h3>2026 Zelenobora (Northeast Mihajl and Northwest Amilpan) Sucession Referendum</h3>
+          <p>Detials about the 2026 Zelenobora Referendum</p>
       </div>
     </section>
 
