--- a/Culture and History/2026zelenoboraref.html
+++ b/Culture and History/2026zelenoboraref.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2026 Northeast Mihajl and Northwest Texica Secession Referendum</title>
-  <meta content="2026 Northeast Mihajl and Northwest Texica Secession Referendum" property="og:title" />
-  <meta content="Official reference page for the 2026 Northeast Mihajl and Northwest Texica Secession Referendum and results." property="og:description" />
+  <title>2026 Northeast Mihajl and Northwest Amilpan Secession Referendum</title>
+  <meta content="2026 Northeast Mihajl and Northwest Amilpan Secession Referendum" property="og:title" />
+  <meta content="Official reference page for the 2026 Northeast Mihajl and Northwest Amilpan Secession Referendum and results." property="og:description" />
   <meta content="https://toadvillebay.com/2026pvref.html" property="og:url" />
   <meta content="https://toadvillebay.com/Images and Videos/flag.png" property="og:image" />
   <meta content="#0066CC" data-react-helmet="true" name="theme-color" />
@@ -44,9 +44,9 @@
 
   <section class="hero" aria-label="PR Card">
     <div class="hero__content">
-      <h1 class="h1-accent">2026 Northeast Mihajl and Northwest Texica Secession Referendum</h1>
+      <h1 class="h1-accent">2026 Northeast Mihajl and Northwest Amilpan Secession Referendum</h1>
       <p>
-        This page displays the referendum held on whether the Northeastern Mihajl and Northwest Texica Region should secede from
+        This page displays the referendum held on whether the Northeastern Mihajl and Northwest Amilpan Region should secede from
         Mihajl and Texica form a new province called <strong>Zelenobora</strong>.
       </p>
     </div>
@@ -56,13 +56,13 @@
 <section class="content-block" aria-labelledby="question-title">
   <h2 id="question-title">Question of the Referendum</h2>
 
-  <p><b>English:</b> Do you agree that the Northeastern Mihajl Region and the Northwestern Texica Region should separate from their respective provinces to create a new province called “Zelenobora”?</p>
+  <p><b>English:</b> Do you agree that the Northeastern Mihajl Region and the Northwestern Amilpan Region should separate from their respective provinces to create a new province called “Zelenobora”?</p>
 
-  <p><b>Français :</b> Êtes-vous d’accord pour que la région du Nord-Est de Mihajl et la région du Nord-Ouest de Texica se séparent de leurs provinces respectives afin de créer une nouvelle province appelée « Zelenobora » ?</p>
+  <p><b>Français :</b> Êtes-vous d’accord pour que la région du Nord-Est de Mihajl et la région du Nord-Ouest de Amilpan se séparent de leurs provinces respectives afin de créer une nouvelle province appelée « Zelenobora » ?</p>
 
-  <p><b>Español:</b> ¿Está de acuerdo en que la región del noreste de Mihajl y la región del noroeste de Texica se separen de sus respectivas provincias para crear una nueva provincia llamada “Zelenobora”?</p>
+  <p><b>Español:</b> ¿Está de acuerdo en que la región del noreste de Mihajl y la región del noroeste de Amilpan se separen de sus respectivas provincias para crear una nueva provincia llamada “Zelenobora”?</p>
 
-  <p><b>ToadVille:</b> Acceptüz-vox que la Rëgion Nord-est düx Mihajl et la Rëgion Nord-ouest düx Texica deverïoz secerdêr düx lour provinçés pour creér une novî provinçé nommée « Zelenobora » ?</p>
+  <p><b>ToadVille:</b> Acceptüz-vox que la Rëgion Nord-est düx Mihajl et la Rëgion Nord-ouest düx Amilpan deverïoz secerdêr düx lour provinçés pour creér une novî provinçé nommée « Zelenobora » ?</p>
 </section>
 
 <section class="content-block" aria-labelledby="info-title">
@@ -114,7 +114,7 @@
 
       <section class="content-block ref-section" aria-labelledby="result-title">
         <h3 id="result-title">Post-referendum</h3>
-        <p><strong>Outcome:</strong> The Government of ToadVille Bay and ToadVille Sur will introduce legislation to establish the Province of <strong>Puerto Valle</strong> and set the transition timeline for provincial services and representation.</p>
+        <p><strong>Outcome:</strong> -</p>
       </section>
     </section>
   </main>
