--- a/Culture and History/2026zelenoboraref.html
+++ b/Culture and History/2026zelenoboraref.html
@@ -99,7 +99,7 @@
       <tr><td>Stari Vode</td><td>5,804</td><td>-</td><td>-</td></tr>
       <tr><td>Borova šuma</td><td>4,990</td><td>-</td><td>-</td></tr>
       <tr><td>Planine</td><td>3,476</td><td>-</td><td>-</td></tr>
-      <tr><td>Zelenograd Capital District</td><td>3,200</td><td>-</td><td>-</td></tr>
+      <tr><td><strong>Novi Zelenograd C.R.</strong></td><td>3,200</td><td>-</td><td>-</td></tr>
     </tbody>
   </table>
 
