--- a/Provinces/provinces.html
+++ b/Provinces/provinces.html
@@ -55,6 +55,7 @@
 				<li><a href="./iledetoadville.html">Île de ToadVille</a></li>
 				<li><a href="./toadville-sur.html">ToadVille Sur</a></li>
 				<li><a href="./puerto-valle.html">Puerto Valle</a></li>
+				<li><a href="./zelenobora.html">Zelenobora</a></li>
 			</ul>
 		</section>
 	</main>
