--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
       <ul class="link-list">
         <li><a href="./TBExit27.html">TBExit27</a></li>
         <li><a href="./About/piracy.html">Anti-piracy</a></li>
-        <li><a href="./Legal/sanctions.html">Sanctions and prohibitions policy</a></li>
+        <li><a href="./operations.html">Operations</a></li>
         <li><a href="./About/steam-version-eos.html">Information about Windows Vista to 8.0 support</a></li>
         <li><a href="./prime-minister.html">Prime Minister</a></li>
         <li><a href="./provincial-flag-reform.html">Provincial flag updates</a></li>
